lab1/Test/L1-A-6-53.cmm
int jj4OE ( {
  struct v3x {
  }IfRVfZO25 [ ] [ 855282945 ] , QvY [ 406639173 ] 
    ;
}
^$